--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,18 @@
 {%  extends 'base.html' %}
 
-<!--{% block scripts %}-->
-<!--    {{ super() }}-->
-<!--    {{ moment.include_moment() }}-->
-<!--{% endblock %}-->
+
 
 {% block content %}
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('static/assets/img/caralog10.jpg')">
+    <header class="intro-header" style="background-image: url({{url_for('static', filename='img/caralog10.jpg') }})">
         <div class="container overlay">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Small Business</h1>
                         <hr class="small">
-                        <span class="subheading">A Small Business Responsive Theme<br>by <a href="http://forbetterweb.com">ForBetterWeb</a></span>
+                        <span class="subheading">A Small Business Responsive Theme<br>by <a href="https://github.com/colibrimp">ForBetterWeb</a></span>
                     </div>
                 </div>
             </div>
@@ -35,9 +32,9 @@
                         {{ super() }}
                         {{ moment.include_moment() }}
                         <p class="post-meta">{{ moment(post.date_posted).format('LL') }}</p>
-                        <img class="img-responsive" src="static/assets/img/{{post.image_file}}">
+                        <img class="img-responsive" src="static/img/{{post.image_file}}">
                         <h2 class="post-title">
-                            <a href="{{ url_for('page') }}">{{post.title}}</a>
+                            <a href="{{ url_for('page', index=post.id) }}">{{post.title}}</a>
                         </h2>
                         <h3 class="post-subtitle">
                             {{ post.description}}
