--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,4 @@
 
-
-
-
 {% block header %}
 <!DOCTYPE html>
 <html lang="en">
@@ -17,22 +14,18 @@
     <title>Small Business</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="static/assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+
 
     <!-- Custom CSS -->
-    <link href="static/assets/css/small-business.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/small-business.css') }}" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -49,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">ForBetterWeb</a>
+                <a class="navbar-brand" href="https://github.com/colibrimp">colibrimp</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,8 +80,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
+
                         <li>
-                            <a href="https://github.com/elkindnet">
+                            <a href="https://github.com/colibrimp">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -96,7 +90,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/jenyelkind">
+                            <a href="https://twitter.com/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -104,7 +98,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/jenyelkind">
+                            <a href="https://www.facebook.com/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -113,7 +107,7 @@
                         </li>
 
                         <li>
-                            <a href="https://plus.google.com/+JenyElkind/">
+                            <a href="https://plus.google.com/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
@@ -121,21 +115,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:elkind@elkind.net">
+                            <a href="https://mail.google.com/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
-                        <li>
-                            <a href="http://elkind.net">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-male fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
+
                     </ul>
                     <p class="copyright text-muted">&copy; {{year}} <a href="https://github.com/colibrimp">colibrimp</a>
                         I <i class="fa fa-heart"></i> <a href="https://github.com/colibrimp">Coding</a></p>
@@ -145,22 +132,18 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="static/assets/js/jquery.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="static/assets/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="static/assets/js/small-business.min.js"></script>
+    <script src="{{ url_for('static', filename='js/small-business.min.js') }}"></script>
 
     <!-- Smooth Scroll -->
-    <script src="static/assets/js/SmoothScroll.js"></script>
+    <script src="{{ url_for('static', filename='js/SmoothScroll.js') }}"></script>
 
-<!--
-Google Analitics
-Demo Purpose Only
-Change UA-XXXXXXX-X to be your site's ID
- -->
+
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
